--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,25 @@
   <body>
     <header class="row">
       <div class="col-3">
-        LOGO
+        <div class="circle">
+        <br />
+        The FUTURE
+        <br />
+        is already
+        <br />
+        HERE
+        </div>
       </div>
-      <div class="col-4">
-        Splurting out Accelerando wit since 2017
+      <div class="col-4 slogan">
+        Random Accelerando wit since 2017
       </div>
-      <div>
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
+
+    <hr />
 
     <br class="clear" />
 
