--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -30,11 +30,6 @@
   font-family: 'laconiclight', serif;
   font-style: italic;
   font-size: 16px;
-  padding-top: 28px;
-}
-
-.links {
-  padding-top: 26px;
 }
 
 .links a {
@@ -66,4 +61,18 @@ letter-spacing: -1.5px; */
 h2 {
   font-family: 'tensoregular', sans-serif;
   font-style: italic;
+}
+
+.next-quote {
+  color: #f84342;
+  font-family: 'tensoregular', sans-serif;
+  font-style: italic;
+  font-size: 20px;
+}
+
+.footer-blurb {
+  font-family: 'laconiclight', serif;
+  font-style: italic;
+  text-align: right;
+  font-size: 12px;
 }
