--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header class="row">
+    <header class="row align-items-center">
       <div class="col-4">
         <div class="circle">
         <br />
@@ -33,6 +33,22 @@
 
     <br class="clear" />
 
+    <div class="container">
     <%= yield %>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-6">
+            <%= link_to "Tell me more", "#", class: 'next-quote' %>
+          </div>
+          <div class="col-6 footer-blurb">
+            Proudly hacked in London, UK, by <a href="https://github.com/cldambrosio" target="_blank">Claire D'Ambrosio</a><br />
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
