--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <header class="row align-items-center">
-      <div class="col-4">
+      <div class="col-3">
         <%= link_to root_path, class: 'logo' do %>
           <div class="circle">
             <br />
@@ -22,12 +22,13 @@
           </div>
         <% end %>
       </div>
-      <div class="col-5 slogan">
+      <div class="col col-sm-4 hidden-xs-down slogan">
         Random Accelerando wit since 2017
       </div>
-      <div class="col-3 links">
+      <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
         <!-- Button trigger modal -->
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+        &nbsp;&nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
     </header>
@@ -45,8 +46,10 @@
           </div>
           <%= simple_form_for Quote.new do |f| %>
             <div class="modal-body">
-              <%= f.input :saying %>
-              <%= f.input :author %>
+              <%= f.input :saying, label: "What is the saying you want to add?", 
+              placeholder: "You watch a talk about technology from 2006 and it feels vintage." %>
+              <br />
+              <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Claire D'Ambrosio" %>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -73,10 +76,10 @@
     <div class="footer">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <%= link_to "Tell me more", root_path, class: 'next-quote' %>
           </div>
-          <div class="col-6 footer-blurb">
+          <div class="col-12 col-sm-6 footer-blurb">
             Proudly hacked in London, UK, by <a href="https://github.com/cldambrosio" target="_blank">Claire D'Ambrosio</a><br />
           </div>
         </div>
