--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Splurty</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Quote Generator Future is Already Here">
+    <title>Splurty Quote Generator</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,7 +12,7 @@
 
   <body>
     <header class="row align-items-center">
-      <div class="col-3">
+      <div class="col">
         <%= link_to root_path, class: 'logo' do %>
           <div class="circle">
             <br />
@@ -25,7 +27,7 @@
       <div class="col col-sm-4 hidden-xs-down slogan">
         Random Accelerando wit since 2017
       </div>
-      <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
+      <div class="col offset-sm-0 col-sm-5 links">
         <!-- Button trigger modal -->
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
         &nbsp;&nbsp;&nbsp;
